--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
 	url = https://github.com/pytorch/FBGEMM.git
 [submodule "submodules/flash-attention"]
 	path = submodules/flash-attention
-	url = https://github.com/Dao-AILab/flash-attention.git
+	url = https://github.com/vllm-project/flash-attention
 [submodule "submodules/generative-recommenders"]
 	path = submodules/generative-recommenders
 	url = https://github.com/facebookresearch/generative-recommenders.git
